--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,1 +1,15 @@
 @import 'bootstrap';
+@import url('https://fonts.googleapis.com/css?family=Lato:100,400,400i,700');
+
+.navbar {
+  font-family: 'Lato', sans-serif;
+  font-weight: 200;
+  box-shadow: 0px 1px 3px #2a2a2a;
+  background: image_url('curls.png');
+}
+
+.navbar-inverse a.navbar-brand {
+  font-family: 'Lato', sans-serif;
+  font-weight: 100;
+  color: whtie;
+}
