--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -69,6 +69,14 @@
   font-family: 'Lato', sans-serif;
 }
 
+.help-block {
+  color: #ff3333;
+  background-color: #FFEEEE;
+  border-radius: 3px;
+  padding: 2px 8px 2px 8px;
+  margin: 10px;
+}
+
 
 h1, h2, h3, h4, h5, h6, .navbar {
   margin: 0;
