--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -7,6 +7,7 @@
 <% @courses.each do |course| %>
   <h2 class="text-center">
     <%= link_to course.title, course_path(course) %>
+
   </h2>
   <br />
   <div class="row">
@@ -18,6 +19,9 @@
     </div>
   </div>
   <br class="clr" />
+  <% if course.image.present? %>
+    <%= image_tag course.image, class: 'img-fluid' %>
+  <% end %>
 <% end %>
   </div>
 </div>
