--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,6 +1,7 @@
 <br />
 <div class="booyah-box col-10 offset-1">
   <h1 class="text-center"><%= current_course.title %></h1>
+  <%= image_tag current_course.image, class: 'img-fluid' %>
   <br />
   <%= link_to 'Preview As Student ...', course_path(current_course), class: 'btn btn-warning float-right' %>
   <br class="clr" />
@@ -15,13 +16,13 @@
         <%= section.title %>
         <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
         <ul>
-        <!--  <% section.lessons.each do |lesson| %> 
+          <% section.lessons.each do |lesson| %> 
             <li>
               <b><%= lesson.title %></b>
               -
               <%= lesson.subtitle %>
             </li>
-          <% end %> -->
+          <% end %>
         </ul>
         <br  class="clr">
       </li>
