--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -3,6 +3,9 @@
 
 <div class="booyah-box col-10 offset-1">
   <h1><%= @course.title %></h1>
+  <div class="col-sm-8 col-12">
+      <%= @course.description %>
+  </div>
   <%= image_tag @course.image, class: 'img-fluid' %>
   <br />
   <div class="row">
@@ -17,25 +20,30 @@
         <%= link_to 'Administer', instructor_course_path(@course), class: 'btn btn-danger btn-large' %>
       <% end %>
     </div>
-
-    <div class="col-sm-8 col-12">
-      <%= @course.description %>
-    </div>
   </div>
 
-  <div class="col-12">
+   <div class="col-12">
     <% @course.sections.each do |section| %>
+    <br /><br />
       <div class="section">
-        <%= section.title %>
-        <% section.lessons.each do |lesson| %>
-          <div class="lesson">
-            <%= link_to lesson_path(lesson) do %>
-              <b><%= lesson.title %></b>
-              -
-              <%= lesson.subtitle %>
-            <% end %>
-          </div>
-        <% end %>
+        <h3>
+          <%= section.title %>
+        </h3>
+        <div class="row">
+          <% section.lessons.each do |lesson| %>
+            <div class="col-12 col-sm-6">
+              <div class="lesson text-center">
+                <br />
+                <%= link_to lesson_path(lesson) do %>
+                  <b><%= lesson.title %></b>
+                  <br />
+                  <%= lesson.subtitle %>
+                <% end %>
+              </div>
+            </div>
+          <% end %>
+        </div>
+        <br class="clr" />
       </div>
     <% end %>
   </div>
