--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,4 +1,3 @@
-
 <br />
 
 <div class="booyah-box col-10 offset-1">
@@ -18,6 +17,14 @@
         <br />
         <br />
         <%= link_to 'Administer', instructor_course_path(@course), class: 'btn btn-danger btn-large' %>
+      <% end %>
+
+      <br />
+      <br />
+      <% if current_user && current_user.enrolled_in?(@course) %>
+        <h3 class="badge badge-info">You are Enrolled!</h3>
+      <% else %>
+        <%= link_to 'Enroll', course_enrollments_path(@course), class: 'btn btn-primary', method: :post %>
       <% end %>
     </div>
   </div>
