--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -16,7 +16,7 @@
 <br />
 <div class="booyah-box col-10 offset-1">
   <h1 class="text-center"><%= current_course.title %></h1>
-  <%= image_tag current_course.image, class: 'img-fluid' %>
+  <%= image_tag current_course.image, class: 'img-fluid text-center' %>
   <br />
   <%= link_to 'Preview As Student ...', course_path(current_course), class: 'btn btn-warning float-right' %>
   <br class="clr" />
@@ -26,7 +26,7 @@
   </div>
 
   <ul>
-    <% current_course.sections.each do |section| %>
+    <% current_course.sections.rank(:row_order).each do |section| %>
       <li>
         <%= section.title %>
         <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
