--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,12 +1,12 @@
-<br />
+<br/>
 
 <div class="booyah-box col-10 offset-1">
   <h1><%= @course.title %></h1>
   <div class="col-sm-8 col-12">
-      <%= @course.description %>
+    <%= @course.description %>
   </div class='text-center'>
   <%= image_tag @course.image, class: 'img-fluid' %>
-  <br />
+  <br/>
   <div class="row">
     <div class="col-sm-4 col-12">
       <span class="badge badge-default">
@@ -14,13 +14,13 @@
       </span>
 
       <% if current_user && current_user == @course.user %>
-        <br />
-        <br />
+        <br/>
+        <br/>
         <%= link_to 'Administer', instructor_course_path(@course), class: 'btn btn-danger btn-large' %>
       <% end %>
 
-      <br />
-      <br />
+      <br/>
+      <br/>
       <% if current_user %>
         <% if current_user.enrolled_in?(@course) %>
           <h3 class="badge badge-info">You are Enrolled!</h3>
@@ -29,44 +29,46 @@
             <%= link_to 'Enroll', course_enrollments_path(@course), class:'btn btn-primary', method: :post %>
           <% else %>
             <%= form_tag course_enrollments_path(@course) do %>
-              <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-                      data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-                      data-email="<%= current_user.email %>"
-                      data-description="<%= @course.title %> (<%= number_to_currency @course.cost %>)"
-                      data-amount="<%= (@course.cost * 100).to_i %>"
-                      data-locale="auto"></script>
-            <% end %>
+            <script
+              src="https://checkout.stripe.com/checkout.js"
+              class="stripe-button"
+              data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+              data-email="<%= current_user.email %>"
+              data-description="<%= @course.title %> (<%= number_to_currency @course.cost %>)"
+              data-amount="<%= (@course.cost * 100).to_i %>"
+              data-locale="auto"></script>
           <% end %>
         <% end %>
-      <% else%>
-        <h3 class="badge badge-info">Sign In to Enroll!</h3>
       <% end %>
-    </div>
-  </div>
-
-   <div class="col-12">
-    <% @course.sections.rank(:row_order).each do |section| %>
-    <br /><br />
-      <div class="section">
-        <h3>
-          <%= section.title %>
-        </h3>
-        <div class="row">
-          <% section.lessons.rank(:row_order).each do |lesson| %>
-            <div class="col-12 col-sm-6">
-              <div class="lesson text-center">
-                <br />
-                <%= link_to lesson_path(lesson) do %>
-                  <b><%= lesson.title %></b>
-                  <br />
-                  <%= lesson.subtitle %>
-                <% end %>
-              </div>
-            </div>
-          <% end %>
-        </div>
-        <br class="clr" />
-      </div>
+    <% else%>
+      <h3 class="badge badge-info">Sign In to Enroll!</h3>
     <% end %>
   </div>
+</div>
+
+<div class="col-12">
+  <% @course.sections.rank(:row_order).each do |section| %>
+    <br/><br/>
+    <div class="section">
+      <h3>
+        <%= section.title %>
+      </h3>
+      <div class="row">
+        <% section.lessons.rank(:row_order).each do |lesson| %>
+          <div class="col-12 col-sm-6">
+            <div class="lesson text-center">
+              <br/>
+              <%= link_to lesson_path(lesson) do %>
+              <b><%= lesson.title %></b>
+              <br/>
+              <%= lesson.subtitle %>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+    <br class="clr"/>
+  </div>
+<% end %>
+</div>
 </div>
