--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,42 +1,50 @@
 <script>
-  $(function() {
+  $(function () {
     $('.lessons').sortable({
-      update: function( event, ui ) {
+      update: function (event, ui) {
         $.ajax({
           type: 'PUT',
           url: ui.item.data('update-url'),
           dataType: 'json',
-          data: {lesson: {row_order_position: ui.item.index()}}
+          data: {
+            lesson: {
+              row_order_position: ui.item.index()
+            }
+          }
         });
       }
     });
     $('.sections').sortable({
-      update: function( event, ui) {
+      update: function (event, ui) {
         $.ajax({
           type: 'PUT',
           url: ui.item.data('update-url'),
           dataType: 'json',
-          data: {section: {row_order_position: ui.item.index()}}
+          data: {
+            section: {
+              row_order_position: ui.item.index()
+            }
+          }
         });
       }
     });
   });
 </script>
 
-<br />
+<br/>
 <div class="booyah-box col-10 offset-1">
   <h1 class="text-center"><%= current_course.title %></h1>
+  <%= image_tag current_course.image, class: 'img-fluid' %>
+
   <div class="text-center">
-    <%= image_tag current_course.image, class: 'img-fluid' %>
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#newSectionModal">
+      Add a new Section ...
+    </button>
   </div>
-  <br />
+  <br/>
   <%= link_to 'Preview As Student ...', course_path(current_course), class: 'btn btn-warning float-right' %>
-  <br class="clr" />
-
-  <div class="text-center">
-    <%= link_to 'Add a new section ...', new_instructor_course_section_path(current_course), class: 'btn btn-primary btn-lg' %>
-  </div>
-
+  <br class="clr"/>
   <ul class="sections">
     <% current_course.sections.rank(:row_order).each do |section| %>
       <li data-update-url="<%= instructor_section_path(section) %>" class="section-li">
@@ -45,14 +53,14 @@
           <%= section.title %>
         </div>
         <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
-        <br class="clr" />
-        <br class="clr" />
+        <br class="clr"/>
+        <br class="clr"/>
         <ul class="lessons">
-          <% section.lessons.rank(:row_order).each do |lesson| %> 
+          <% section.lessons.rank(:row_order).each do |lesson| %>
             <li data-update-url="<%= instructor_lesson_path(lesson) %>">
               <div class="row">
                 <div class="col-1">
-                  <br />
+                  <br/>
                   <span class="fa fa-ellipsis-v"></span>
                 </div>
                 <div class="col-11 text-center">
@@ -64,13 +72,35 @@
                   </p>
                 </div>
               </div>
-              <br class="clr" />
+              <br class="clr"/>
             </li>
           <% end %>
         </ul>
-        <br  class="clr">
+        <br class="clr">
       </li>
     <% end %>
   </ul>
 
+</div>
+<!-- Modal -->
+<div class="modal fade" id="newSectionModal" tabindex="-1" role="dialog" aria-labelledby="newSectionModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+        <h4 class="modal-title" id="newSectionModalLabel">Add a new section</h4>
+      </div>
+      <%= simple_form_for @section, url: instructor_course_sections_path(current_course) do |f| %>
+      <div class="modal-body">
+        <%= f.input :title %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <%= f.submit "Add a Section", class: 'btn btn-primary' %>
+      </div>
+    <% end %>
+  </div>
+</div>
 </div>
