--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,5 +1,10 @@
 <script>
   $(function () {
+    $('.new-lesson-button').click(function() {
+      var lessonURL = $(event.target).data('lesson-url');
+      $('#newLessonForm').attr('action',lessonURL);
+    });
+
     $('.lessons').sortable({
       update: function (event, ui) {
         $.ajax({
@@ -37,7 +42,7 @@
   <%= image_tag current_course.image, class: 'img-fluid' %>
 
   <div class="text-center">
-    <!-- Button trigger modal -->
+    <!-- Button trigger modal for new section -->
     <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#newSectionModal">
       Add a new Section ...
     </button>
@@ -52,7 +57,10 @@
           <span class="fa fa-ellipsis-v"></span>
           <%= section.title %>
         </div>
-        <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
+        <!-- Button trigger modal for new lesson-->
+        <button type="button" class="btn btn-primary btn-lg float-right new-lesson-button" data-toggle="modal" data-target="#newLessonModal" data-lesson-url="<%= instructor_section_lessons_path(section) %>">
+          New Lesson ...
+        </button>
         <br class="clr"/>
         <br class="clr"/>
         <ul class="lessons">
@@ -102,5 +110,31 @@
       </div>
     <% end %>
   </div>
+</div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="newLessonModal" tabindex="-1" role="dialog" aria-labelledby="newLessonModalLabel" aria-hidden="true">
+<div class="modal-dialog" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">×</span>
+      </button>
+      <h4 class="modal-title" id="newLessonModalLabel">Add a new lesson</h4>
+    </div>
+    <%= simple_form_for @lesson, url: '#', html: {id: 'newLessonForm' } do |f| %>
+    <div class="modal-body">
+      <%= f.input :title %>
+      <%= f.input :subtitle %>
+      <%= f.input :video %>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+    <%= f.submit "Add the Lesson", class: 'btn btn-primary' %>
+  </div>
+<% end %>
+</div>
 </div>
 </div>
