--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,11 +53,50 @@
 
   <div id="footer">
     <div class="container">
-      <b>Teachers</b>
-      <br />
-      <%= link_to 'Teach a Course', new_instructor_course_path %>
-      <br />
-      <%= link_to 'My Dashboard', dashboard_path %>
+      <div class="row">
+        <div class="col-12 col-sm-3">
+          <b>Teachers</b>
+          <br />
+          <%= link_to 'Teach a Course', new_instructor_course_path %>
+          <br />
+          <%= link_to 'My Dashboard', dashboard_path %>
+        </div>
+        <div class="col-12 col-sm-3">
+          <b>About</b>
+          <br  />
+          <%= link_to 'Team', '#' %>
+          <br  />
+          <%= link_to 'Careers', '#' %>
+          <br  />
+          <%= link_to 'Privacy Policy', '#' %>
+        </div>
+        <div class="col-12 col-sm-3">
+          <b>Contact</b>
+          <br  />
+          kev.ftw595@gmail.com
+          <br />
+          8537 Metrodale
+          <br  />
+          Houston, TX, 77040
+        </div>
+        <div class="col-12 col-sm-3 social">
+          <b>Social</b>
+          <br  />
+          <br  />
+          <%= link_to 'https://github.com/kwin555' do %>
+            <span class="fa fa-github-square fa-2x social-button"></span>
+          <% end %>
+          <%= link_to 'https://www.facebook.com/kevinNguyen595' do %>
+            <span class="fa fa-facebook-square fa-2x social-button"></span>
+          <% end %>
+          <%= link_to 'https://medium.com/@kevinnguyen_26044' do %>
+            <span class="fa fa-medium fa-2x social-button"></span>
+          <% end%>
+          <%= link_to 'https://twitter.com/kevftw595' do %>
+            <span class="fa fa-twitter-square fa-2x social-button"></span>
+          <% end %>
+        </div>
+      </div>
     </div>
   </div>
 
